stateDiagram-v2
    %% L++ State Diagram: L++ Blueprint Visualizer
    [*] --> idle
    idle --> loaded : LOAD
    loaded --> loaded : LOAD
    viewing --> loaded : LOAD
    loaded --> viewing : VIEW
    viewing --> viewing : VIEW_GRAPH
    viewing --> viewing : VIEW_TABLE
    viewing --> viewing : VIEW_MERMAID
    viewing --> viewing : SELECT
    viewing --> viewing : DESELECT
    viewing --> viewing : ZOOM_IN
    viewing --> viewing : ZOOM_OUT
    viewing --> viewing : TOGGLE_GATES
    viewing --> viewing : TOGGLE_ACTIONS
    viewing --> loaded : BACK
    loaded --> idle : UNLOAD
    viewing --> idle : UNLOAD
    loaded --> loaded : EXPORT_README
    viewing --> viewing : EXPORT_README
    idle --> loaded : LOAD_TREE
    loaded --> loaded : SET_TREE
    loaded --> viewing : VIEW_TREE [tree is not None]
    viewing --> viewing : VIEW_TREE [tree is not None]
    viewing --> viewing : VIEW_TREE_MERMAID [tree is not None]
    viewing --> loaded : UNLOAD_TREE